Prevent hiding space in <code> on wrap

--- a/docs/static/theme.css
+++ b/docs/static/theme.css
@@ -100,7 +100,8 @@ line-height:0
 
 code {
 padding: 0 .2em;
-line-height: normal
+line-height: normal;
+white-space: pre-wrap;
 }
 
 span.Syntax {
